--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
 /* Global css */
+.hidden {
+  display: none;
+}
 :root {
   --primary-color: #131313;
   --secondery-color: #ff900e;
@@ -226,6 +229,7 @@ nav ul li a {
   justify-content: space-around;
   margin-top: 100px;
 }
+
 .facts .items .item {
   padding: 45px 36px 60px 36px;
   border: 1px solid var(--secondery-color);
@@ -233,6 +237,22 @@ nav ul li a {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.facts .items .item:hover {
+  background-color: var(--secondery-color);
+  transition: 0.5s ease-in-out, transform 0.5s;
+  transform: rotate(5deg) scale(1.1);
+  box-shadow: -10px -5px 15px -3px rgba(255, 144, 14, 0.1),
+    -10px -8px 10px 0px rgba(255, 144, 14, 0.12),
+    -10px -8px 20px 0px rgba(255, 144, 14, 0.14),
+    -10px -8px 30px 0px rgba(255, 144, 14, 0.16),
+    -10px -8px 40px 0px rgba(255, 144, 14, 0.18),
+    -10px -8px 50px 0px rgba(255, 144, 14, 0.18);
+}
+.facts .items .item:hover .title,
+.numbers {
+  color: var(--text-white);
+  transition: 0.3s linear;
 }
 .facts .item img {
   width: 45px;
@@ -275,7 +295,11 @@ nav ul li a {
   justify-content: space-between;
 }
 .sponsers .items .item img {
+  transition: all 0.2s linear;
   filter: grayscale(100%);
+}
+.sponsers .items .item img:hover {
+  filter: grayscale(0);
 }
 /* Contact part style */
 .contact .info {
@@ -341,4 +365,148 @@ input[type="submit"] {
   text-align: center;
   color: var(--dark-mid);
   font-size: 20px;
+}
+
+/* Mobile device style */
+@media only screen and (max-width: 576px) {
+  .container {
+    padding: 0px 20px;
+  }
+  .btn-orange {
+    font-size: 18px;
+  }
+  /* Header */
+  header {
+    padding: 20px 0px;
+  }
+  nav {
+    display: block;
+  }
+  .logo {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+  nav ul {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+  /* Banner */
+  .banner {
+    padding-top: 30px;
+  }
+  .banner .title {
+    font-size: 30px;
+  }
+  .banner .description,
+  .features-enjoy > .description {
+    width: 100%;
+  }
+  /* features */
+  .features {
+    display: block;
+    padding-bottom: 20px;
+  }
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 24px;
+  }
+
+  .bio {
+    margin-top: 30px;
+  }
+
+  .bio .title,
+  .features-enjoy > .title,
+  .facts > .title,
+  .sponsers .info .title,
+  .contact .info .title {
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 30px;
+    text-align: center;
+  }
+  .bio .description,
+  .item-container,
+  .contact .info {
+    width: 100%;
+  }
+  .enjoy {
+    flex-direction: column;
+    padding-bottom: 20px;
+  }
+
+  .imag-container {
+    margin-top: 20px;
+  }
+  .item-container .item .title {
+    font-size: 18px;
+  }
+  .experience {
+    position: static;
+    margin-top: 20px;
+    padding: 20px 50px;
+  }
+  .experience .years {
+    font-size: 30px;
+  }
+  .experience .title {
+    font-size: 20px;
+  }
+
+  .facts,
+  .sponsers {
+    padding: 20px 0;
+  }
+  .facts > .description {
+    width: 100%;
+  }
+  .facts .items,
+  .sponsers .items {
+    margin-top: 30px;
+    flex-direction: column;
+    gap: 40px;
+  }
+  .sponsers {
+    margin-bottom: 0px;
+  }
+  .sponsers .info {
+    width: 100%;
+  }
+  .sponsers .items {
+    align-items: center;
+  }
+
+  .form-info-container {
+    flex-direction: column;
+    margin-bottom: 50px;
+  }
+  #box-1 {
+    order: 2;
+  }
+  #box-2 {
+    order: 1;
+  }
+  form {
+    padding: 20px;
+  }
+  .footer {
+    margin-bottom: 50px;
+  }
+  .footer .info {
+    font-size: 16px;
+  }
+  /* Animation */
+  .facts .items .item:hover {
+    background-color: var(--secondery-color);
+    transition: 0.5s ease-in-out, transform 0.5s;
+    transform: rotate(5deg) scale(1);
+    box-shadow: -5px -5px 15px -3px rgba(255, 144, 14, 0.1),
+      -5px -8px 10px 0px rgba(255, 144, 14, 0.12),
+      -5px -8px 20px 0px rgba(255, 144, 14, 0.14),
+      -5px -8px 30px 0px rgba(255, 144, 14, 0.16),
+      -5px -8px 40px 0px rgba(255, 144, 14, 0.18),
+      -5px -8px 50px 0px rgba(255, 144, 14, 0.18);
+  }
 }
